# hyperlit

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  hyperlit.toml  test_zip.rs  tool-tool
.github/workflows/: build-release.yml  ci.yml  release.yml
.tool-tool/: tool-tool.v2.kdl
backend/: Cargo.toml
backend-mdbook/: Cargo.toml
backend-mdbook/src/: lib.rs  mdbook_backend.rs
backend/src/: backend.rs  backend_compile_params.rs  lib.rs
base/: Cargo.toml
base/src/: error.rs  id.rs  id_generator.rs  lib.rs  logging.rs  result.rs  shared_string.rs
cli/: Cargo.toml  build.rs
cli/sample/: hyperlit.toml
cli/sample/docs/src/: 00-introduction.md  SUMMARY.md
cli/sample/output/: 00-introduction.html  404.html  index.html  print.html  searchindex.js  toc.html  toc.js
cli/sample/src/: sample.rs
cli/src/: arguments.rs  hyperlit-cli.rs  main.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  runner.rs
core/test/: hyperlit-test.toml
crates/hyperlit_base/: Cargo.toml
crates/hyperlit_base/src/: error.rs  error_tests.rs  lib.rs  pal_tests.rs  tracing.rs
crates/hyperlit_base/src/pal/: file_path.rs  http.rs  mock.rs  mod.rs  real_pal.rs  traits.rs
crates/hyperlit_cli/: Cargo.toml
crates/hyperlit_cli/src/: main.rs
crates/hyperlit_engine/: Cargo.toml
crates/hyperlit_engine/src/: comment_parser.rs  config.rs  document.rs  extractor.rs  lib.rs  scanner.rs  search.rs  watcher.rs
crates/hyperlit_engine/src/api/: document.rs  mod.rs  service.rs  sse.rs
crates/hyperlit_engine/src/store/: memory.rs  mod.rs  traits.rs
database/: Cargo.toml
database/src/: database.rs  evaluate_directive.rs  in_memory_database.rs  lib.rs
docs/: ARCHITECTURE.md  book.toml
docs/src/: 00-introduction.md  90-decisions.md  SUMMARY.md
docs/src/decisions/: DR-0000 Use decision records to document decisions.md
engine/: Cargo.toml
engine/src/: create_html.rs  document.rs  document_data.rs  document_info.rs  engine.rs  engine.rs~  extractor.rs  lib.rs  live_engine.rs  search.rs  site_info.rs  template_expander.rs  template_string.rs  text_edit.rs
engine/src/search/: scan_search_service.rs  search_service.rs
example-book/: amdahls-law.md  brooks-law.md  hyperlit.toml  wirths-law.md
example-book/laws/: conways-law.md  hofstadters-law.md  leaky-abstractions.md  metcalfes-law.md  not-utf8.md  peters-principle.md  umlaut-test.md  zawinskis-law.md
example-book/output/: index.html
example-book/src/: Example.cs  Example.java  example.cpp  example.go  example.js  example.py  example.rs  example.ts
example-site/: hyperlit.toml
example-site/laws/: amdahls-law.md  brooks-law.md  galls-law.md  moores-law.md
example-site/src/: Example.cs  example.cpp  example.go  example.js  example.sh  example.ts  example.xml
export-html/: Cargo.toml
export-html/src/: convert_code_block.rs  convert_document.rs  convert_heading.rs  convert_link.rs  convert_passthru.rs  convert_simple.rs  convert_simple_unclosed.rs  convert_tag.rs  html_exporter.rs  lib.rs
extractor/: Cargo.toml
extractor/src/: extractor.rs  git_info.rs  lib.rs
model/: Cargo.toml
model/src/: attributes.rs  backend.rs  book.rs  book_definition.rs  book_structure.rs  chapter.rs  chapter_data.rs  chapter_info.rs  database.rs  directive_evaluation.rs  directives.rs  element.rs  exporter.rs  file_source.rs  key.rs  last_modification_info.rs  lib.rs  location.rs  segment.rs  span.rs  tags.rs  value.rs
pal/: Cargo.toml
pal/src/: pal.rs
pal_mock/: Cargo.toml
pal_mock/src/: mock_file.rs  pal_mock.rs
pal_real/: Cargo.toml
pal_real/src/: pal_real.rs
parser-markdown/: Cargo.toml
parser-markdown/src/: book_toml.rs  extract_markdown_title.rs  lib.rs  markdown.rs  markdown_book.rs  markdown_metadata.rs  summary.rs
runner/: Cargo.toml
runner/sample/: hyperlit.toml
runner/sample/docs/: book.toml
runner/sample/docs/src/: 00-introduction.md
runner/sample/src/: sample.rs
runner/src/: runner.rs
runtime/: Cargo.toml
runtime/src/: backend_compile_params_impl.rs  evaluate_directive.rs  lib.rs
scripts/: build-release.sh  build_release_package.sh  build_ui.sh  commit.sh
scripts/git-hooks/: commit-msg
server/: Cargo.toml
server/examples/: serve_time.rs
server/src/: http_types.rs  lib.rs  live_service.rs  run_server.rs  server.rs
server/src/assets/: live_service.css  live_service.html  live_service.js
src/: main.rs
test_zip_check/: Cargo.toml
ui/: index.html  live_service.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/css/: style.css
ui/js/: live_service.js
ui/src/: App.tsx  main.tsx
ui/src/chapter/: ChapterStore.ts  ChapterView.tsx
ui/src/document/: DocumentStore.ts  DocumentView.tsx
ui/src/jestor/: TestStore.ts  TestStoreComponent.tsx  jestor.ts
ui/src/layout/: Layout.tsx  NavigationBar.tsx  NavigationTree.tsx
ui/src/raystore/: TestStore.ts  TestStoreComponent.tsx  raystore.ts
ui/src/site/: SiteInfo.ts  SiteStore.ts
ui/src/structure/: BookStructure.ts  BookStructureStore.ts
ui/src/types/: global.d.ts
ui/src/util/: markdown.ts
ui_old/: live_service.html
ui_old/css/: layout.css  live_service.css
ui_old/js/: live_service.js
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts  sse.ts
web/src/components/: EmptyDocumentPlaceholder.tsx  SplitLayout.tsx
web/src/hooks/: useScrollRestoration.ts
web/src/pages/: DocumentPage.tsx  SearchPage.tsx
web/src/utils/: searchHighlight.ts
