[workspace]
resolver = "3"
members = [
    "base",
    "cli",
    "pal",
    "pal_mock",
    "pal_real",
    "parser-markdown",
    "server",
    "engine",
]

[workspace.dependencies]
hyperlit-base = { path = "base" }
hyperlit-core = { path = "core" }
hyperlit-engine = { path = "engine" }
hyperlit-server = { path = "server" }

expect-test = "1.5.1"
tracing = "0.1.41"
relative-path = { version = "2.0.1", features = ["serde"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.33"
arcstr = { version = "1.2.0", features = ["serde"] }

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimization in Development mode.
opt-level = 0
lto = false
#debug = false
