[package]
name = "hyperlit-backend-mdbook"
version = "0.1.0"
edition = "2024"
description = "A software documentation tool documentation embedded in source files - mdbook backend"
license = "Apache-2.0"

[dependencies]
hyperlit-base = { path = "../base" }
hyperlit-model = { path = "../model" }
hyperlit-backend = { path = "../backend" }
mdbook = { version = "0.4.51", default-features = false, features = ["search"] }
