[package]
name = "hyperlit-backend"
version = "0.1.0"
edition = "2024"
description = "A software documentation tool documentation embedded in source files - backend crate"
license = "Apache-2.0"

[dependencies]
hyperlit-base = { path = "../base" }
hyperlit-model = { path = "../model" }
hyperlit-database = { path = "../database" }
