[package]
name = "hyperlit-base"
version = "0.1.0"
edition = "2024"
description = "A software documentation tool documentation embedded in source files - base crate"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
arcstr = "1.2.0"
relative-path = { workspace = true }
nanoid = "0.4.0"


[lints.clippy]
# Causes false positives on context! macro
redundant_closure = "allow"
