[package]
name = "hyperlit"
version = "0.1.0"
description = "A software documentation tool documentation embedded in source files"

keywords = ["documentation", "docs", "hyperlit", "literate"]
categories = ["template-engine", "command-line-utilities", "development-tools"]
license = "Apache-2.0"

repository = "https://github.com/manuel-woelker/hyperlit"
homepage = "https://github.com/manuel-woelker/hyperlit"
readme = "../README.md"

rust-version = "1.86.0"
edition = "2024"


[[bin]]
name = "hyperlit"
path = "src/hyperlit-cli.rs"

[dependencies]
hyperlit-core = { workspace = true }
hyperlit-base = { workspace = true }
hyperlit-engine = { workspace = true }
hyperlit-server = { workspace = true }

clap = { version = "4.5.39", features = ["derive"] }
log = "0.4.27"
enable-ansi-support = "0.3.1"


[build-dependencies]
