[package]
name = "hyperlit-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlit-base = { path = "../base" }
hyperlit-database = { path = "../database" }
hyperlit-extractor = { path = "../extractor" }
hyperlit-model = { path = "../model" }
hyperlit-backend-mdbook = { path = "../backend-mdbook" }
fs_extra = "1.3.0"
path-absolutize = "3.1.1"
tracing = { version = "0.1.37" }