[package]
name = "hyperlit-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlit-base = { path = "../base" }
hyperlit-database = { path = "../database" }
hyperlit-extractor = { path = "../extractor" }
hyperlit-model = { path = "../model" }
hyperlit-backend-mdbook = { path = "../backend-mdbook" }
path-absolutize = "3.1.1"
tracing = { version = "0.1.37" }
walkdir = "2.3.3"
toml-span = "0.5.1"

[dev-dependencies]
expect-test = "1.4.0"