[package]
name = "hyperlit-core"
version = "0.1.0"
edition = "2024"
description = "A software documentation tool documentation embedded in source files - core crate"
license = "Apache-2.0"

[dependencies]
hyperlit-base = { path = "../base", version = "0.1.0" }
toml-span = "0.5.1"

[dev-dependencies]
expect-test = "1.4.0"
