[package]
name = "hyperlit-database"
version = "0.1.0"
edition = "2024"
description = "A software documentation tool documentation embedded in source files - database crate"
license = "Apache-2.0"

[dependencies]
hyperlit-base = { path = "../base", version = "0.1.0" }
hyperlit-model = { path = "../model", version = "0.1.0" }
