[package]
name = "hyperlit-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlit-base = { version = "0.1.0", path = "../base" }
hyperlit-core = { version = "0.1.0", path = "../core" }
hyperlit-model = { version = "0.1.0", path = "../model" }
hyperlit-export-html = { version = "0.1.0", path = "../export-html" }

hyperlit-pal = { version = "0.1.0", path = "../pal" }

parking_lot = "0.12.5"