[package]
name = "hyperlit-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlit-base = { version = "0.1.0", path = "../base" }
hyperlit-core = { version = "0.1.0", path = "../core" }
hyperlit-model = { version = "0.1.0", path = "../model" }
hyperlit-export-html = { version = "0.1.0", path = "../export-html" }
hyperlit-database = { version = "0.1.0", path = "../database" }
hyperlit-extractor = { version = "0.1.0", path = "../extractor" }
hyperlit-parser-markdown = { version = "0.1.0", path = "../parser-markdown" }


hyperlit-pal = { version = "0.1.0", path = "../pal" }
hyperlit-pal-real = { version = "0.1.0", path = "../pal_real" }

parking_lot = "0.12.5"
tracing = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
hyperlit-pal-mock = { version = "0.1.0", path = "../pal_mock" }
expect-test = { workspace = true }