[package]
name = "hyperlit-export-html"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlit-base = { version = "0.1.0", path = "../base" }
hyperlit-model = { version = "0.1.0", path = "../model" }

pulldown-cmark-escape = "0.11.0"

[dev-dependencies]
hyperlit-parser-markdown = { version = "0.1.0", path = "../parser-markdown" }

expect-test = { workspace = true }
