[package]
name = "hyperlit-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlit-base = { path = "../base" }
hyperlit-model = { path = "../model" }
git2 = { version = "0.20.2", features = ["vendored-libgit2"] }
chrono = "0.4.41"
syntect = { version = "5.2.0", default-features = false, features = ["parsing", "default-syntaxes", "regex-onig"] }
