[package]
name = "hyperlit-model"
version = "0.1.0"
edition = "2024"
description = "A software documentation tool documentation embedded in source files - model crate"
license = "Apache-2.0"

[dependencies]
hyperlit-base = { path = "../base", version = "0.1.0" }
chrono = "0.4.41"
itertools = "0.14.0"
tinyjson = "2.5.1"
serde = { features = ["derive"], workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

