[package]
name = "hyperlit-runner"
version = "0.1.0"
edition = "2024"
description = "A software documentation tool documentation embedded in source files - runner crate"
license = "Apache-2.0"

[dependencies]
hyperlit-base = { path = "../base", version = "0.1.0" }
hyperlit-backend = { path = "../backend", version = "0.1.0" }
hyperlit-core = { path = "../core", version = "0.1.0" }
hyperlit-database = { path = "../database", version = "0.1.0" }
hyperlit-extractor = { path = "../extractor", version = "0.1.0" }
hyperlit-model = { path = "../model", version = "0.1.0" }
hyperlit-runtime = { path = "../runtime", version = "0.1.0" }
hyperlit-backend-mdbook = { path = "../backend-mdbook", version = "0.1.0" }
path-absolutize = "3.1.1"
tracing = { version = "0.1.37" }
walkdir = "2.3.3"
toml-span = "0.5.1"
relative-path = { workspace = true }
ignore = "0.4.20"

[dev-dependencies]
expect-test = "1.4.0"
