[package]
name = "hyperlit-runtime"
version = "0.1.0"
edition = "2024"
description = "A software documentation tool documentation embedded in source files - runtime crate"
license = "Apache-2.0"

[dependencies]
hyperlit-base = { path = "../base" }
hyperlit-database = { path = "../database" }
hyperlit-backend = { path = "../backend" }
hyperlit-model = { path = "../model" }
