[package]
name = "hyperlit-server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlit-base = { version = "0.1.0", path = "../base" }
hyperlit-core = { version = "0.1.0", path = "../core" }
hyperlit-model = { version = "0.1.0", path = "../model" }
hyperlit-engine = { version = "0.1.0", path = "../engine" }
hyperlit-pal = { version = "0.1.0", path = "../pal" }
hyperlit-pal-real = { version = "0.1.0", path = "../pal_real" }
tracing = "0.1.37"
tiny_http = "0.12.0"
chunked_transfer = "1.5.0"
serde = { workspace = true }
serde_json = { workspace = true }
# newer versions of the zip crate seem to have issues with the zip asset file appended to the binary
zip = { version = "=1.1.4", features = ["deflate"], default-features = false }

[dev-dependencies]
expect-test = { workspace = true }
