[package]
name = "hyperlit_base"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
globset = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
tempfile = "3"