[package]
name = "hyperlit_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlit_base = { path = "../hyperlit_base" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
regex = "1.10"
serde_yaml = "0.9"
syntect = "5.3"

[dev-dependencies]
expect-test = { workspace = true }
