[package]
name = "hyperlit_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlit_base = { path = "../hyperlit_base" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
regex = "1.10"
serde_yaml = "0.9"
syntect = "5.3"
zip = { version = "1.1.4", default-features = false, features = ["deflate"] }
percent-encoding = "2.3"
parking_lot = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
